--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,6 @@
 @import './base.css';
+@import './fonts/stamp-web/css/stamp-web-embedded.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
