--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -37,3 +37,8 @@
 body div[data-v-app=""] {
   display: none;
 }
+
+/* force the cancel button of the sweetalert to gray from red */
+body div:where(.swal2-container) button:where(.swal2-styled).swal2-deny {
+  background-color: #ccc;
+}
