Further updates to the stamp edit process
* Added tests for ToggleButtonGroup
* Added tests for ConditionSelector, GradeSelector and CurrencySelecter
* Added tests to fully cover CurrencyCode
* added "findByCategory( )" for preferenceStore with cache awareness
* added the ability to create a stamp or wantlist from table
* provided the ability to load prefrences into the creation model for stamp creation.
 * fixed Ownership typo in name
* Fixed entity selectors to allow for name filtering in components

#31

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -18,7 +18,7 @@
   @apply flex flex-grow-0 flex-shrink-0 mt-auto ml-auto m-2;
 }
 .panel-form-title {
-  @apply bg-[var(--vf-primary)] p-2 text-[var(--vf-color-on-primary)] text-sm mb-3 h-11 flex-nowrap truncate;
+  @apply bg-[var(--vf-primary)] p-2 text-[var(--vf-color-on-primary)] text-sm mb-3 h-9 min-h-9 max-h-9 flex-nowrap truncate;
 }
 
 @tailwind utilities;
