--- a/public/fonts/stamp-web/css/stamp-web.css
+++ b/public/fonts/stamp-web/css/stamp-web.css
@@ -1,15 +1,13 @@
 @font-face {
   font-family: 'stamp-web';
-  src: url('../font/stamp-web.eot?74952596');
-  src:
-    url('../font/stamp-web.eot?74952596#iefix') format('embedded-opentype'),
-    url('../font/stamp-web.woff2?74952596') format('woff2'),
-    url('../font/stamp-web.woff?74952596') format('woff'),
-    url('../font/stamp-web.ttf?74952596') format('truetype'),
-    url('../font/stamp-web.svg?74952596#stamp-web') format('svg');
+  src: url('../font/stamp-web.eot?24004777');
+  src: url('../font/stamp-web.eot?24004777#iefix') format('embedded-opentype'),
+       url('../font/stamp-web.woff2?24004777') format('woff2'),
+       url('../font/stamp-web.woff?24004777') format('woff'),
+       url('../font/stamp-web.ttf?24004777') format('truetype'),
+       url('../font/stamp-web.svg?24004777#stamp-web') format('svg');
   font-weight: normal;
   font-style: normal;
-  font-display: swap;
 }
 /* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
 /* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
@@ -17,22 +15,20 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'stamp-web';
-    src: url('../font/stamp-web.svg?74952596#stamp-web') format('svg');
+    src: url('../font/stamp-web.svg?24004777#stamp-web') format('svg');
   }
 }
 */
-
-[class^='sw-icon-']:before,
-[class*=' sw-icon-']:before {
-  font-family: 'stamp-web';
+[class^="sw-icon-"]:before, [class*=" sw-icon-"]:before {
+  font-family: "stamp-web";
   font-style: normal;
   font-weight: normal;
-  speak: none;
+  speak: never;
 
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
-  margin-right: 0.2em;
+  margin-right: .2em;
   text-align: center;
   /* opacity: .8; */
 
@@ -45,7 +41,7 @@
 
   /* Animation center compensation - margins should be symmetric */
   /* remove if not needed */
-  margin-left: 0.2em;
+  margin-left: .2em;
 
   /* you can be more comfortable with increased icons size */
   /* font-size: 120%; */
@@ -58,180 +54,65 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
-.sw-icon-stamp-collection:before {
-  content: '\e800';
-} /* '' */
-.sw-icon-calendar:before {
-  content: '\e801';
-} /* '' */
-.sw-icon-stamp:before {
-  content: '\e802';
-} /* '' */
-.sw-icon-ribbon:before {
-  content: '\e803';
-} /* '' */
-.sw-icon-progress:before {
-  content: '\e804';
-} /* '' */
-.sw-icon-search:before {
-  content: '\e805';
-} /* '' */
-.sw-icon-imageburst:before {
-  content: '\e806';
-} /* '' */
-.sw-icon-plus:before {
-  content: '\e807';
-} /* '' */
-.sw-icon-info:before {
-  content: '\e808';
-} /* '' */
-.sw-icon-home:before {
-  content: '\e809';
-} /* '' */
-.sw-icon-exchange:before {
-  content: '\e80a';
-} /* '' */
-.sw-icon-thumbs-up:before {
-  content: '\e80b';
-} /* '' */
-.sw-icon-thumbs-down:before {
-  content: '\e80c';
-} /* '' */
-.sw-icon-edit:before {
-  content: '\e80d';
-} /* '' */
-.sw-icon-attention:before {
-  content: '\e80e';
-} /* '' */
-.sw-icon-deception:before {
-  content: '\e80f';
-} /* '' */
-.sw-icon-trash:before {
-  content: '\e810';
-} /* '' */
-.sw-icon-copy:before {
-  content: '\e811';
-} /* '' */
-.sw-icon-settings:before {
-  content: '\e812';
-} /* '' */
-.sw-icon-previous:before {
-  content: '\e813';
-} /* '' */
-.sw-icon-next:before {
-  content: '\e814';
-} /* '' */
-.sw-icon-filter:before {
-  content: '\e815';
-} /* '' */
-.sw-icon-purchased:before {
-  content: '\e816';
-} /* '' */
-.sw-icon-sort-down:before {
-  content: '\e817';
-} /* '' */
-.sw-icon-sort-up:before {
-  content: '\e818';
-} /* '' */
-.sw-icon-references:before {
-  content: '\e819';
-} /* '' */
-.sw-icon-minus:before {
-  content: '\e81a';
-} /* '' */
-.sw-icon-defect:before {
-  content: '\e81b';
-} /* '' */
-.sw-icon-delete:before {
-  content: '\e81c';
-} /* '' */
-.sw-icon-catalogue:before {
-  content: '\e81d';
-} /* '' */
-.sw-icon-album:before {
-  content: '\e81e';
-} /* '' */
-.sw-icon-time:before {
-  content: '\e81f';
-} /* '' */
-.sw-icon-down:before {
-  content: '\e820';
-} /* '' */
-.sw-icon-up:before {
-  content: '\e821';
-} /* '' */
-.sw-icon-forward:before {
-  content: '\e822';
-} /* '' */
-.sw-icon-to-end:before {
-  content: '\e823';
-} /* '' */
-.sw-icon-to-start:before {
-  content: '\e824';
-} /* '' */
-.sw-icon-language:before {
-  content: '\e825';
-} /* '' */
-.sw-icon-key:before {
-  content: '\e826';
-} /* '' */
-.sw-icon-gridview:before {
-  content: '\e827';
-} /* '' */
-.sw-icon-list:before {
-  content: '\e828';
-} /* '' */
-.sw-icon-wantlist:before {
-  content: '\e829';
-} /* '' */
-.sw-icon-seller:before {
-  content: '\e82a';
-} /* '' */
-.sw-icon-cash-value:before {
-  content: '\e82b';
-} /* '' */
-.sw-icon-ok:before {
-  content: '\e82c';
-} /* '' */
-.sw-icon-cancel:before {
-  content: '\e82d';
-} /* '' */
-.sw-icon-country:before {
-  content: '\e82e';
-} /* '' */
-.sw-icon-target:before {
-  content: '\e82f';
-} /* '' */
-.sw-icon-note:before {
-  content: '\e830';
-} /* '' */
-.sw-icon-refresh:before {
-  content: '\e831';
-} /* '' */
-.sw-icon-select-all:before {
-  content: '\e832';
-} /* '' */
-.sw-icon-select-all-2:before {
-  content: '\e833';
-} /* '' */
-.sw-icon-clear-all:before {
-  content: '\e834';
-} /* '' */
-.sw-icon-swap:before {
-  content: '\e835';
-} /* '' */
-.sw-icon-print:before {
-  content: '\e836';
-} /* '' */
-.sw-icon-envelope:before {
-  content: '\e837';
-} /* '' */
-.sw-icon-star:before {
-  content: '\e838';
-} /* '' */
-.sw-icon-mint:before {
-  content: '\e839';
-} /* '' */
-.sw-icon-used:before {
-  content: '\f192';
-} /* '' */
+.sw-icon-stamp-collection:before { content: '\e800'; } /* '' */
+.sw-icon-calendar:before { content: '\e801'; } /* '' */
+.sw-icon-stamp:before { content: '\e802'; } /* '' */
+.sw-icon-ribbon:before { content: '\e803'; } /* '' */
+.sw-icon-progress:before { content: '\e804'; } /* '' */
+.sw-icon-search:before { content: '\e805'; } /* '' */
+.sw-icon-imageburst:before { content: '\e806'; } /* '' */
+.sw-icon-plus:before { content: '\e807'; } /* '' */
+.sw-icon-info:before { content: '\e808'; } /* '' */
+.sw-icon-home:before { content: '\e809'; } /* '' */
+.sw-icon-exchange:before { content: '\e80a'; } /* '' */
+.sw-icon-thumbs-up:before { content: '\e80b'; } /* '' */
+.sw-icon-thumbs-down:before { content: '\e80c'; } /* '' */
+.sw-icon-edit:before { content: '\e80d'; } /* '' */
+.sw-icon-attention:before { content: '\e80e'; } /* '' */
+.sw-icon-deception:before { content: '\e80f'; } /* '' */
+.sw-icon-trash:before { content: '\e810'; } /* '' */
+.sw-icon-copy:before { content: '\e811'; } /* '' */
+.sw-icon-settings:before { content: '\e812'; } /* '' */
+.sw-icon-previous:before { content: '\e813'; } /* '' */
+.sw-icon-next:before { content: '\e814'; } /* '' */
+.sw-icon-filter:before { content: '\e815'; } /* '' */
+.sw-icon-purchased:before { content: '\e816'; } /* '' */
+.sw-icon-sort-down:before { content: '\e817'; } /* '' */
+.sw-icon-sort-up:before { content: '\e818'; } /* '' */
+.sw-icon-references:before { content: '\e819'; } /* '' */
+.sw-icon-minus:before { content: '\e81a'; } /* '' */
+.sw-icon-defect:before { content: '\e81b'; } /* '' */
+.sw-icon-delete:before { content: '\e81c'; } /* '' */
+.sw-icon-catalogue:before { content: '\e81d'; } /* '' */
+.sw-icon-album:before { content: '\e81e'; } /* '' */
+.sw-icon-time:before { content: '\e81f'; } /* '' */
+.sw-icon-down:before { content: '\e820'; } /* '' */
+.sw-icon-up:before { content: '\e821'; } /* '' */
+.sw-icon-forward:before { content: '\e822'; } /* '' */
+.sw-icon-to-end:before { content: '\e823'; } /* '' */
+.sw-icon-to-start:before { content: '\e824'; } /* '' */
+.sw-icon-language:before { content: '\e825'; } /* '' */
+.sw-icon-key:before { content: '\e826'; } /* '' */
+.sw-icon-gridview:before { content: '\e827'; } /* '' */
+.sw-icon-list:before { content: '\e828'; } /* '' */
+.sw-icon-wantlist:before { content: '\e829'; } /* '' */
+.sw-icon-seller:before { content: '\e82a'; } /* '' */
+.sw-icon-cash-value:before { content: '\e82b'; } /* '' */
+.sw-icon-ok:before { content: '\e82c'; } /* '' */
+.sw-icon-cancel:before { content: '\e82d'; } /* '' */
+.sw-icon-country:before { content: '\e82e'; } /* '' */
+.sw-icon-target:before { content: '\e82f'; } /* '' */
+.sw-icon-note:before { content: '\e830'; } /* '' */
+.sw-icon-refresh:before { content: '\e831'; } /* '' */
+.sw-icon-select-all:before { content: '\e832'; } /* '' */
+.sw-icon-select-all-2:before { content: '\e833'; } /* '' */
+.sw-icon-clear-all:before { content: '\e834'; } /* '' */
+.sw-icon-swap:before { content: '\e835'; } /* '' */
+.sw-icon-print:before { content: '\e836'; } /* '' */
+.sw-icon-envelope:before { content: '\e837'; } /* '' */
+.sw-icon-star:before { content: '\e838'; } /* '' */
+.sw-icon-mint:before { content: '\e839'; } /* '' */
+.sw-icon-bulk-edit:before { content: '\e83a'; } /* '' */
+.sw-icon-link:before { content: '\e83b'; } /* '' */
+.sw-icon-unlink:before { content: '\f127'; } /* '' */
+.sw-icon-used:before { content: '\f192'; } /* '' */
